--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,24 @@
 gitt
-
+pulse/
+Signal/
+StardewValley/
+Thunar/
+Unknown
+blender/
+chromium/
+cmus/
+dconf/
+flameshot/
+fontconfig/
+go/
+htop/
+ranger/
+spotify/
+vlc/
+xfce4/
+QtProject.conf
+mimeapps.list
+user-dirs.dirs
+user-dirs.locale
+zoom.conf
+zoomus.conf
