--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Proxima Nova 12
+font pango:Hack 12
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -29,6 +29,9 @@ exec --no-startup-id dex --autostart --environment i3
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock -i ~/.config/i3/lock-pic.png --nofork
+
+exec --no-startup-id lua ~/.config/i3/scripts/
+
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -54,7 +57,7 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec kitty --hold neofetch
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -200,16 +203,20 @@ bindsym $mod+r mode "resize"
 # Pulse Audio controls
 # bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
 # bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
-bindsym XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_SINK@ .05+ --limit 2.0 && pkill -RTMIN+1 i3blocks
-bindsym XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_SINK@ .05- && pkill -RTMIN+1 i3blocks
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+bindsym XF86AudioRaiseVolume exec lua ~/.config/i3/scripts/volume.lua up && pkill -RTMIN+1 i3blocks
+bindsym XF86AudioLowerVolume exec lua ~/.config/i3/scripts/volume.lua down && pkill -RTMIN+1 i3blocks
+bindsym XF86AudioMute exec lua ~/.config/i3/scripts/volume.lua mute && pkill -RTMIN+1 i3blocks
 
-# brightness controll
+
+# brightness control
 bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +10% 
 bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 10%-
 
+# keyboard backlight brightness controls
+bindsym XF86Explorer exec --no-startup-id lua ~/.config/i3/scripts/kbd_backlight.lua
+
 #connect display to right
-bindsym XF86Display exec xrandr --output eDP-1 --auto --output DP-2 --right-of eDP-1
+bindsym XF86Display exec lua ~/.config/i3/scripts/display.lua
 
 # air plane mode button
 bindsym XF86WLAN exec lua ~/.config/scripts/internet-panic.lua
@@ -313,5 +320,7 @@ bar {
 	}
 }
 
+exec_always --no-startup-id picom --config ~/.config/picom/picom.conf
+
 # autostart applications
-exec --no-startup-id i3-msg 'workspace 1; exec kitty'
+exec --no-startup-id i3-msg 'workspace 1; exec kitty --hold neofetch'
