--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -32,7 +32,7 @@ color=#8B5FBF
 #command=pavucontrol
 
 [volume-pulseaudio]
-command=sh ~/.config/i3/scripts/volume
+command=lua ~/.config/i3/scripts/volume.lua $button
 interval=once
 signal=1
 
@@ -71,7 +71,7 @@ color=#8B5FBF
 full_text=
 label=
 interval=1
-command=sh ~/.config/i3/scripts/miei/ora.sh  
+command=sh ~/.config/i3/scripts/miei/ora.sh
 separator_block_width=10
 color=#FEC0CE
 
