new power.lua and weather.lua scripts; updated volume.lua script

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -58,7 +58,7 @@ color=#8B5FBF
 #color=#585b70
 
 [battery]
-command=sh ~/.config/i3/scripts/miei/power.sh
+command=lua ~/.config/i3/scripts/power.lua $button
 label=
 interval=5
 
@@ -82,7 +82,7 @@ full_text= /
 color=#8b5fbf
 
 [weather]
-command=sh ~/.config/i3/scripts/weather.sh
+command=lua ~/.config/i3/scripts/weather.lua $button
 interval=3600
 
 [separator]
