--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -5,19 +5,26 @@ markup=pango
 separator_block_width=6
 color=#FEC0CE
 
+
+
 #[wallpaper]
 #full_text=󰸉
 #color=#fab387
 #command=~/.config/i3/scripts/miei/wallpaper.sh
 
-[separator]
-full_text=
-color=#E7AD99
+#[tasks]
+#command=lua ~/.config/i3/scripts/tick.lua
+#interval=1
+
+
+#[separator]
+#full_text=/
+#color=#8B5FBF
 
 [cpu_usage]
 full_text=<span size="medium" > </span>   
 label= 
-command=sh ~/.config/i3/scripts/miei/cpu.sh
+command=lua ~/.config/i3/scripts/cpu.lua $button
 interval=10
 
 
@@ -33,7 +40,7 @@ color=#8B5FBF
 
 [volume-pulseaudio]
 command=lua ~/.config/i3/scripts/volume.lua $button
-interval=once
+interval=100
 signal=1
 
 [separator]
@@ -66,21 +73,6 @@ interval=5
 full_text=/
 color=#8B5FBF
 
-
-[time]
-full_text=
-label=
-interval=1
-command=sh ~/.config/i3/scripts/miei/ora.sh
-separator_block_width=10
-color=#FEC0CE
-
-separator_block_width=0
-#background=#272836
-[separator]
-full_text= /
-color=#8b5fbf
-
 [weather]
 command=lua ~/.config/i3/scripts/weather.lua $button
 interval=3600
@@ -88,6 +80,17 @@ interval=3600
 [separator]
 full_text= /
 color=#8b5fbf
+
+[time]
+interval=1
+command=lua ~/.config/i3/scripts/time.lua $button
+
+[separator]
+full_text= /
+color=#8b5fbf
+
+
+
 
 
 [shutdown_menu]
